[package]
name = "rig-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
regex = "1.10.4"  # 添加regex依赖
rig-core = "0.35.0"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "fs", "io-util", "io-std", "process", "time"] }

walkdir = "2.5.0"
